# scrabble-solver

./: .gitignore  Board.hs  Client.hs  Main.hs  README.md  Scorer.hs  board.txt  scrabble-solver.cabal  stack.yaml
config/: scrabble.board  wwf.board
server/: Server.hs
src/: Board.hs  Parsers.hs  Scorer.hs  Trie.hs
tests/: Board_Test.hs  Parsers_Test.hs  Scorer_Test.hs  Test.hs  Trie_Test.hs
