name:                scrabble-solver
version:             0.1.0.0
synopsis:            Calculates highest scoring move for Scrabble or Words With Friends board.
description:         Please see README.md
homepage:            http://github.com/jasdennison/scrabble-solver#readme
license:             BSD3
license-file:        LICENSE
author:              James Dennison
maintainer:          example@example.com
copyright:           2015 James Dennison
category:            Fun
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board, Parsers, Scorer, Trie
  build-depends:       array
                     , base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , parsec
                     , parsec-extra
  default-language:    Haskell2010

executable scrabble-solver-server
  hs-source-dirs:      server
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scrabble-solver
                     , aeson
                     , deepseq
                     , http-types
                     , parallel
                     , parsec
                     , text
                     , Spock
  default-language:    Haskell2010

executable scrabble-solver-client
  hs-source-dirs:      client
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , lens
                     , text
                     , wreq
  default-language:    Haskell2010

test-suite scrabble-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scrabble-solver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasdennison/scrabble-solver
