name:                scrabble-solver
version:             0.1.0.0
synopsis:            Calculates highest scoring move for Scrabble or Words With Friends board.
description:         Please see README.md
homepage:            http://github.com/jasdennison/scrabble-solver#readme
license:             BSD3
license-file:        LICENSE
author:              James Dennison
maintainer:          James Dennison
copyright:           2015 James Dennison
category:            Fun
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board, Parsers, Scorer, Trie
  build-depends:       base >= 4.8 && < 5
                     , array >= 0.5
                     , containers >= 0.5
                     , deepseq >= 1.4
                     , parsec >= 3.1
                     , parsec-extra >= 0.1
  default-language:    Haskell2010

executable scrabble-solver-server
  hs-source-dirs:      server
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -static -optc-static -optl-static
  build-depends:       base >= 4.8 && < 5
                     , scrabble-solver
                     , aeson >= 0.8
                     , deepseq >= 1.4
                     , http-types >= 0.8
                     , parallel >= 3.2
                     , parsec >= 1.4
                     , Spock >= 0.8
                     , text >= 1.2
                     , wai-cors >= 0.2
  default-language:    Haskell2010

executable scrabble-solver-client
  hs-source-dirs:      client
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , bytestring >= 0.10
                     , lens >= 4.12
                     , text >= 1.2
                     , wreq >= 0.4
  default-language:    Haskell2010

test-suite scrabble-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  other-modules:       Board_Test, Parsers_Test, Scorer_Test, Trie_Test
  build-depends:       base >= 4.8 && < 5
                     , array >= 0.5
                     , containers >= 0.5
                     , parsec >= 1.4
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9
                     , tasty-quickcheck >= 0.8
                     , scrabble-solver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasdennison/scrabble-solver

